# simetrik

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: Documentaciขn prueba.xlsx  Prueba t‚cnica Integraciones .docx  sentencias_punto_2.txt
output/punto_1/: bachata.csv  blues.csv  classical.csv  country.csv  cumbia.csv  electronic.csv  folk.csv  hip-hop.csv  indie.csv  jazz.csv  latin.csv  metal.csv  pop.csv  r-n-b.csv  reggaeton.csv  rock.csv  salsa.csv  soul.csv  trap.csv  vallenato.csv
src/punto_1_spotify/: auth.py  client.py  extractor.py
src/punto_2_parser/: parser.py  schema.py
src/punto_3_sql/: queries.sql
